--- a/styles/page-specific.css
+++ b/styles/page-specific.css
@@ -5,3 +5,50 @@ content-strip-3 {
 content-strip-3 heading {
   color: white;
 }
+/*index*/
+
+carousel {
+  display: flex;
+  height: auto;
+  background-color: #2d2d2d;
+  justify-content: center
+}
+.carousel-cell {
+  width: 100%; /* full width */
+  height: 380px; /* height of carousel */
+  margin-right: 10px;
+  background-color: #444444;
+}
+.carousel-title {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 34px;
+  margin: 0;
+}
+.carousel-info {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  padding-bottom: 20px;
+  padding-top: 10px;
+}
+.carousel-text-card {
+  display: block;
+  background: #111111;
+  height: 100%;
+  width: 33.3%;
+  margin: 0px 0 0 auto;
+}
+.carousel-text-card>div {
+  text-align: center;
+  color: white;
+  margin: auto 0 auto 0;
+  position: relative;
+  top: 50%;
+  transform: perspective(1px) translateY(-50%);
+}
+banner-3.extra-padding-y {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+a[type="button"].bigger {
+  padding: 10px 20px;
+}
