--- a/resources/materialize/0.97.8/css/materialize.css
+++ b/resources/materialize/0.97.8/css/materialize.css
@@ -83,9 +83,9 @@
   color: #8b1014 !important;
 }
 
-.red {
+/*.red {
   background-color: #F44336 !important;
-}
+}*/
 
 .red-text {
   color: #F44336 !important;
