--- a/styles/page-specific.css
+++ b/styles/page-specific.css
@@ -6,7 +6,12 @@ content-strip-3 heading {
   color: white;
 }
 /*index*/
-
+#time-banner {
+  text-align: center;
+}
+#meeting-icon {
+  padding-bottom: 40px;
+}
 carousel {
   display: flex;
   height: auto;
@@ -25,7 +30,7 @@ carousel {
 .flickity-button-icon {
   fill: #dddddd !important;
 }
-.carousel-cell {
+.main-carousel .carousel-cell {
   width: 100%; /* full width */
   height: 380px; /* height of carousel */
   margin-right: 10px;
@@ -33,27 +38,35 @@ carousel {
   background-size: 100% auto;
   background-position: center;
   background-repeat: no-repeat;
-
 }
-.carousel-title {
+.img-carousel .carousel-cell {
+  width: 100%; /* full width */
+  height: 600px; /* height of carousel */
+  margin-right: 10px;
+  background-color: #444444;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.main-carousel .carousel-title {
   font-family: 'IBM Plex Sans', sans-serif;
   font-size: 34px;
   margin: 0;
 }
-.carousel-info {
+.main-carousel .carousel-info {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   padding-bottom: 20px;
   padding-top: 10px;
 }
-.carousel-text-card {
+.main-carousel .carousel-text-card {
   display: block;
   background-color: #111111;
   height: 100%;
   width: 33.3%;
   margin: 0px 0 0 auto;
 }
-.carousel-text-card>div {
+.main-carousel .carousel-text-card>div {
   text-align: center;
   color: white;
   margin: auto 0 auto 0;
@@ -76,12 +89,108 @@ carousel {
 #card5 {
   background-image: url("../src/banner images/pineneedles_l.jpg")
 }
+#imgcard1 {
+  background-image: url("../src/photos-index-slideshow/1.jpg");
+}
+#imgcard2 {
+  background-image: url("../src/photos-index-slideshow/2.jpg");
+}
+#imgcard3 {
+  background-image: url("../src/photos-index-slideshow/3.jpg");
+}
+#imgcard4 {
+  background-image: url("../src/photos-index-slideshow/4.jpg");
+}
+#imgcard5 {
+  background-image: url("../src/photos-index-slideshow/5.jpg");
+}
+#imgcard6 {
+  background-image: url("../src/photos-index-slideshow/6.jpg");
+}
+#imgcard7 {
+  background-image: url("../src/photos-index-slideshow/7.jpg");
+}
+#imgcard8 {
+  background-image: url("../src/photos-index-slideshow/8.jpg");
+}
+#imgcard9 {
+  background-image: url("../src/photos-index-slideshow/9.jpg");
+}
+#imgcard10 {
+  background-image: url("../src/photos-index-slideshow/10.jpg");
+}
+#imgcard11 {
+  background-image: url("../src/photos-index-slideshow/11.jpg");
+}
+#imgcard12 {
+  background-image: url("../src/photos-index-slideshow/12.jpg");
+}
+#imgcard13 {
+  background-image: url("../src/photos-index-slideshow/13.jpg");
+}
+#imgcard14 {
+  background-image: url("../src/photos-index-slideshow/14.jpg");
+}
+#imgcard15 {
+  background-image: url("../src/photos-index-slideshow/15.jpg");
+}
+#imgcard16 {
+  background-image: url("../src/photos-index-slideshow/16.jpg");
+}
+#imgcard17 {
+  background-image: url("../src/photos-index-slideshow/17.jpg");
+}
+#imgcard18 {
+  background-image: url("../src/photos-index-slideshow/18.jpg");
+}
+#imgcard19 {
+  background-image: url("../src/photos-index-slideshow/19.jpg");
+}
+#imgcard20 {
+  background-image: url("../src/photos-index-slideshow/20.jpg");
+}
+#imgcard21 {
+  background-image: url("../src/photos-index-slideshow/21.jpg");
+}
+#imgcard22 {
+  background-image: url("../src/photos-index-slideshow/22.jpg");
+}
+#imgcard23 {
+  background-image: url("../src/photos-index-slideshow/23.jpg");
+}
+#imgcard24 {
+  background-image: url("../src/photos-index-slideshow/24.jpg");
+}
+#imgcard25 {
+  background-image: url("../src/photos-index-slideshow/25.jpg");
+}
+#imgcard26 {
+  background-image: url("../src/photos-index-slideshow/26.jpg");
+}
+#imgcard27 {
+  background-image: url("../src/photos-index-slideshow/27.jpg");
+}
+#imgcard28 {
+  background-image: url("../src/photos-index-slideshow/28.jpg");
+}
+#imgcard29 {
+  background-image: url("../src/photos-index-slideshow/29.jpg");
+}
+#imgcard30 {
+  background-image: url("../src/photos-index-slideshow/30.jpg");
+}
+#imgcard31 {
+  background-image: url("../src/photos-index-slideshow/31.jpg");
+}
+#imgcard32 {
+  background-image: url("../src/photos-index-slideshow/32.jpg");
+}
 @media (max-width: 680px) {
-  .carousel-text-card {
+  .main-carousel .carousel-text-card {
     width: 100%;
     background: rgba(0,0,0,0.5);
   }
-  .carousel-cell {
+  .main-carousel .carousel-cell {
     background-size: cover;
   }
 }
