change red background to be less harsh

--- a/styles/components.css
+++ b/styles/components.css
@@ -64,7 +64,7 @@
   --banner-elements-padding-between: 5px;
   --banner-background-color: #134885;
   --banner-text-color: #eeeeee;
-  --background-red: #ce1126;
+  --background-red: #bc1b2d;
   --background-white: #ffffff;
   --banner-text-color-light: #134885;
 }
