topnav on small displays (mobile) displays page title name instead of site name
This makes it feel more like a native app

--- a/styles/troop370-topnav.css
+++ b/styles/troop370-topnav.css
@@ -159,6 +159,9 @@ topnav li.dropdown {
     z-index: 10;
     display: none;
 }
+#titlebar2 {
+  display: none;
+}
 @media (max-width: 600px) {
   titlebar heading {
     margin-left: 80px;
@@ -169,6 +172,12 @@ topnav li.dropdown {
   }
   topnav ul {
     display: none;
+  }
+  #titlebar1 {
+    display: none;
+  }
+  #titlebar2 {
+    display: block;
   }
 }
 .side-nav a {
