--- a/styles/troop370-topnav.css
+++ b/styles/troop370-topnav.css
@@ -184,3 +184,6 @@ topnav li.dropdown {
 .side-nav a {
   text-decoration: none;
 }
+.nav-shadow {
+  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2),0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12);
+}
