Campout Schedule and Local Events page

--- a/styles/page-specific.css
+++ b/styles/page-specific.css
@@ -266,3 +266,8 @@ textarea.materialize-textarea {
     width: 100%;
   }
 }
+/*campout schedule and local events*/
+.plist p {
+  padding-top: 0;
+  padding-bottom: 0;
+}
