--- a/resources/materialize/0.97.8/css/materialize.css
+++ b/resources/materialize/0.97.8/css/materialize.css
@@ -643,9 +643,9 @@
   color: #304ffe !important;
 }
 
-.blue {
+/*.blue {
   background-color: #2196F3 !important;
-}
+}*/
 
 .blue-text {
   color: #2196F3 !important;
