keep carousel page dots in one line

--- a/styles/page-specific.css
+++ b/styles/page-specific.css
@@ -20,6 +20,8 @@ carousel {
 }
 .flickity-page-dots {
   bottom: 15px !important;
+  overflow: auto;
+  height: 14px;
 }
 .flickity-page-dots .dot {
   background: #dddddd !important;
